cpufreq_lisi: Initial bringup of Lisi cpu govenror
* This governor has taken as basis interactive-Alessa * ths is a dynamic cpu frequency and latency-sensitive loads

Change-Id: Ie6c37b49d43f870e2185b59dc2eee85983369f8b
Signed-off-by: klozz <klozz707@gmail.com>
Signed-off-by: Pawan Singh <Pawan.S5277@yahoo.com>

--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -157,6 +157,14 @@ config CPU_FREQ_DEFAULT_GOV_ALUCARD
 	select CPU_FREQ_GOV_ALUCARD
 	help
 
+config CPU_FREQ_DEFAULT_GOV_LISI
+	bool "lisi"
+	select CPU_FREQ_GOV_LISI
+	help
+	  Use the CPUFreq governor 'lisi' as default. This allows
+	  you to get a full dynamic cpu frequency and latency-sensitive
+	  loads
+
 config CPU_FREQ_DEFAULT_GOV_SCHED
 	bool "sched"
 	select CPU_FREQ_GOV_INTERACTIVE
@@ -266,6 +274,17 @@ config CPU_FREQ_GOV_INTERACTIVE
 	  interactive workloads.
 
 	  For details, take a look at linux/Documentation/cpu-freq.
+
+	  If in doubt, say N.
+
+config CPU_FREQ_GOV_LISI
+	bool "'lisi' cpufreq policy governor"
+	help
+	  'lisi' - This driver adds a dynamic cpufreq policy governor
+	  designed for latency-sensitive workloads.
+
+	  The governor does a periodic polling and
+	  changes frequency based on the CPU utilization.
 
 	  If in doubt, say N.
 
