--- a/arch/arm64/configs/land_defconfig
+++ b/arch/arm64/configs/land_defconfig
@@ -81,6 +81,7 @@ CONFIG_PM_WAKELOCKS_LIMIT=0
 CONFIG_PM_RUNTIME=y
 CONFIG_PM_DEBUG=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
+CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_SUSPEND_TIME=y
 CONFIG_CPU_IDLE=y
 CONFIG_CPU_FREQ=y
@@ -451,6 +452,7 @@ CONFIG_FB_MSM=y
 CONFIG_FB_MSM_MDSS=y
 CONFIG_FB_MSM_MDSS_WRITEBACK=y
 CONFIG_FB_MSM_MDSS_XLOG_DEBUG=y
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
 CONFIG_BACKLIGHT_LCD_SUPPORT=y
 CONFIG_SOUND=y
 CONFIG_SND=y
@@ -708,5 +710,11 @@ CONFIG_LZ4_DECOMPRESS=y
 CONFIG_MSM_KERNEL_PROTECT=y
 CONFIG_MSM_KERNEL_PROTECT_MPU=y
 CONFIG_IOSCHED_BFQ=y
+CONFIG_IOSCHED_MAPLE=y
+CONFIG_IOSCHED_ZEN=y
+CONFIG_IOSCHED_SIO=y
+CONFIG_IOSCHED_FIOPS=y
 CONFIG_CGROUP_BFQIO=y
-CONFIG_DEFAULT_DEADLINE=y
+CONFIG_DEFAULT_MAPLE=y
+CONFIG_SOUND_CONTROL=y
+CONFIG_WAKE_GESTURES=y
