--- a/arch/arm64/configs/land_defconfig
+++ b/arch/arm64/configs/land_defconfig
@@ -97,6 +97,7 @@ CONFIG_CPU_FREQ_GOV_ELECTRON=y
 CONFIG_CPU_FREQ_GOV_ALUCARD=y
 CONFIG_CPU_FREQ_GOV_DARKNESS=y
 CONFIG_CPU_FREQ_GOV_LISI=y
+CONFIG_FRANDOM=y
 CONFIG_NET=y
 CONFIG_PACKET=y
 CONFIG_UNIX=y
