--- a/arch/arm64/configs/land_defconfig
+++ b/arch/arm64/configs/land_defconfig
@@ -23,7 +23,7 @@ CONFIG_CGROUP_SCHED=y
 CONFIG_RT_GROUP_SCHED=y
 CONFIG_SCHED_HMP=y
 CONFIG_SCHED_QHMP=y
-# CONFIG_SCHED_CORE_CTL is not set
+CONFIG_SCHED_CORE_CTL=y
 CONFIG_LEDS_GPIO=y
 CONFIG_NAMESPACES=y
 # CONFIG_UTS_NS is not set
