--- a/arch/arm64/configs/land_defconfig
+++ b/arch/arm64/configs/land_defconfig
@@ -725,3 +725,5 @@ CONFIG_CGROUP_BFQIO=y
 CONFIG_DEFAULT_MAPLE=y
 CONFIG_SOUND_CONTROL=y
 CONFIG_WAKE_GESTURES=y
+CONFIG_ASMP=y
+CONFIG_AIO_HOTPLUG=y
