configs: land: Disable Userspace gov & test-iosched i/o
Signed-off-by: Pawan Singh <Pawan.S5277@yahoo.com>

--- a/arch/arm64/configs/land_defconfig
+++ b/arch/arm64/configs/land_defconfig
@@ -89,7 +89,7 @@ CONFIG_CPU_IDLE=y
 CONFIG_CPU_FREQ=y
 CONFIG_SCHED_FREQ_INPUT=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
-CONFIG_CPU_FREQ_GOV_USERSPACE=y
+# CONFIG_CPU_FREQ_GOV_USERSPACE is not set
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
@@ -718,6 +718,7 @@ CONFIG_LZ4_COMPRESS=y
 CONFIG_LZ4_DECOMPRESS=y
 CONFIG_MSM_KERNEL_PROTECT=y
 CONFIG_MSM_KERNEL_PROTECT_MPU=y
+# CONFIG_IOSCHED_TEST is not set
 CONFIG_IOSCHED_BFQ=y
 CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_ZEN=y
